--- a/CreditCardFraudDetection.ipynb
+++ b/CreditCardFraudDetection.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,25 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Manasa1205/MachineLearning/blob/main/CreditCardFraudDetection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#CreditCardFraudDetection"
+      ],
+      "metadata": {
+        "id": "k-0drDVMNfmR"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "Importing the Dependencies"
       ],
@@ -25,7 +45,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 163,
+      "source": [],
+      "metadata": {
+        "id": "C6YqXyi8Niu-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "8ghF6bfZZIVW"
       },
@@ -49,7 +78,7 @@
       "metadata": {
         "id": "J-EwrADIotJS"
       },
-      "execution_count": 164,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -66,7 +95,7 @@
         "id": "u0KQNUYeo8Zk",
         "outputId": "bcf3f507-e635-4507-d3b2-eae04cd7cfaa"
       },
-      "execution_count": 165,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -497,7 +526,7 @@
         "id": "T27CNl3ipJMX",
         "outputId": "55c3f45f-8683-4516-a0c9-f168f0ec93ac"
       },
-      "execution_count": 166,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -934,7 +963,7 @@
         "id": "C86CQkVfplCf",
         "outputId": "af24b2ab-d1ac-4323-9aba-2253bf7c5433"
       },
-      "execution_count": 167,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -996,7 +1025,7 @@
         "id": "9cUNM5ROpsMI",
         "outputId": "3b4d8d0d-b21c-4a0b-f20e-ae5a0180eaa3"
       },
-      "execution_count": 168,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1206,7 +1235,7 @@
         "id": "ypqiS7bWpzzS",
         "outputId": "89454d4e-9424-43be-ec2f-e39caf6c4056"
       },
-      "execution_count": 169,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1285,7 +1314,7 @@
       "metadata": {
         "id": "XSo1FahMqAFx"
       },
-      "execution_count": 170,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1301,7 +1330,7 @@
         "id": "jxDPEzsMqhZq",
         "outputId": "ce5a652f-43b2-4b14-86a3-76cc1d83068f"
       },
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1327,7 +1356,7 @@
         "id": "OylCO0qLqlSY",
         "outputId": "e9249e54-e86d-45ca-abca-a2904134b8d6"
       },
-      "execution_count": 172,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1421,7 +1450,7 @@
         "id": "CEWbrnyfqzj8",
         "outputId": "1a90e2c1-af0d-4158-af76-f07e00972a78"
       },
-      "execution_count": 173,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1516,7 +1545,7 @@
         "id": "kiROWn2mq8sN",
         "outputId": "c1e8a1d5-3dd4-47ca-a1c0-dd9fa4b8a842"
       },
-      "execution_count": 174,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1907,7 +1936,7 @@
       "metadata": {
         "id": "5tl9_5ORrQe_"
       },
-      "execution_count": 175,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1927,7 +1956,7 @@
       "metadata": {
         "id": "X6Rv0WLUsDT5"
       },
-      "execution_count": 176,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1943,7 +1972,7 @@
         "id": "3flPZszIsRVi",
         "outputId": "21309724-a542-4748-a8f8-17b934930de2"
       },
-      "execution_count": 177,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2374,7 +2403,7 @@
         "id": "OZvpjB_CsWda",
         "outputId": "56ee2dfe-a85e-48a4-96dc-a530a70e6bbc"
       },
-      "execution_count": 178,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2804,7 +2833,7 @@
         "id": "P1jPwCaysjsj",
         "outputId": "dc109d0f-31cf-4db6-fad2-141abcccc600"
       },
-      "execution_count": 179,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2873,7 +2902,7 @@
         "id": "viZSsWqSscH5",
         "outputId": "4d04ec2b-f0b7-42fb-ae44-2487129b59b6"
       },
-      "execution_count": 180,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3259,7 +3288,7 @@
       "metadata": {
         "id": "ohd_MHkFs3u1"
       },
-      "execution_count": 181,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3274,7 +3303,7 @@
         "id": "phqFCi7ztYK5",
         "outputId": "290f87ca-4094-45d3-d39b-4341d87a9045"
       },
-      "execution_count": 182,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3336,7 +3365,7 @@
         "id": "lhJV9OOFteaZ",
         "outputId": "5ba2a53c-fb24-47dd-b0b5-430433d01c02"
       },
-      "execution_count": 183,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3375,7 +3404,7 @@
       "metadata": {
         "id": "xuSngag6tlP3"
       },
-      "execution_count": 184,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3390,7 +3419,7 @@
         "id": "xnRpSEHVuSJV",
         "outputId": "3cade39b-2a8e-4e63-f96b-3c10860b5b40"
       },
-      "execution_count": 185,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3425,7 +3454,7 @@
       "metadata": {
         "id": "Cqr1Z5oouZCP"
       },
-      "execution_count": 186,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3442,7 +3471,7 @@
         "id": "oMoqA6NIuiB3",
         "outputId": "266cafe5-0f1b-49bf-992f-20962e3888a6"
       },
-      "execution_count": 187,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3895,7 +3924,7 @@
       "metadata": {
         "id": "u6tsIfXiuv60"
       },
-      "execution_count": 188,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3910,7 +3939,7 @@
         "id": "kX0jF5_pvDaP",
         "outputId": "b69a895c-b0d8-4022-bf2c-77cf15c927cd"
       },
-      "execution_count": 189,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3931,7 +3960,7 @@
       "metadata": {
         "id": "IagLcC4gvUWl"
       },
-      "execution_count": 190,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3946,7 +3975,7 @@
         "id": "VbAUFaJgvI_s",
         "outputId": "44abf357-1c3c-4b1d-c140-001443cf745e"
       },
-      "execution_count": 191,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3981,7 +4010,7 @@
         "id": "H_ClGOXI6mqy",
         "outputId": "d23eb3d4-dfd7-48b0-c330-3233869b8745"
       },
-      "execution_count": 192,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
